--- a/index.html
+++ b/index.html
@@ -5,10 +5,75 @@
 		<meta charset="utf-8">
 		<title>Madison Hockaday</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="js/scrollIt.js" type="text/javascript"></script>
 		<script src="js/script.js"></script>
 	</head>
 	<body>
-		<h1>Madison Hockaday</h1>
+		<div class='nav-container'>
+			<nav>
+				<ul>
+					<li><a class='active' data-scroll-nav='1'>About</a></li>
+					<li><a data-scroll-nav='2'>Music</a></li>
+					<li><img src="img/icon.png" /></li>
+					<li><a data-scroll-nav='3'>Contribute</a></li>
+					<li><a data-scroll-nav='4'>Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class="container">
+			<section data-scroll-index="0">
+				<div class="content">
+					<h1 id="madi">Madison Hockaday</h1>
+					<img class="circle" src="img/madi.jpeg" />
+					<p>This website is where you can get to know me, Madison Hockaday, as a singer-songwriter. My original music is very simple and honest. In my songs I try to be completely open while also give listeners a product they can relate to. Please feel free to contact me at any time, I’d love to talk to you!</p>
+					<p>If you are on this site because you are buying my debut EP, “5”, I truly appreciate your support. The proceeds from “5” will be donated to the Anthony Rizzo Family Foundation. For more information, please visit the Contribute section on this site or go directly to <a href="http://rizzo44.com" target="_blank">Foundation's page</a>.</p>
+				</div>
+			</section>
+			<hr>
+			<section data-scroll-index="1">
+				<div class="content">
+				<h1>About</h1>
+				<img id="studio" src="img/studio.jpeg" />
+				<div class="about-description">
+					<p>Hi there! Thank you so much for visiting my website!</p>
+					<p>My name is Madison Hockaday, I am 21 years old, and am currently attending Berklee College of Music in Boston. When I was two years old, I was inspired by the Disney Orchestra on TV, which led to the beginning of violin lessons at five years old on one of the smallest violins you could ever imagine, and I have been in love with music ever since. It has been a long and challenging road filled with many instruments and a myriad of opportunities, but it has been worth every step. I cannot wait for what is to come! But for now, I would just like to share the first five songs in my songwriting catalogue with you, that have been released on my debut EP “5”.</p>
+					<p>Please take a listen, and if you decide to buy “5”, I would like to let you know that the money will be donated to the Anthony Rizzo Family Foundation. If you decide you don’t want to purchase the EP and you’d still like to donate, <a href="http://rizzo44.com" target="_blank">please  do so here</a>. Thanks again! I hope you like what you hear!</p>
+				</div>
+				</div>
+			</section>
+			<hr>
+			<section style="clear: both;" data-scroll-index="2">
+				<div class="content">
+					<h1>Music</h1>
+					<a href="http://www.cdbaby.com/cd/madisonhockaday" target="_blank"><img id="cover" src="img/cover.jpg" /></a>
+					<p class="music-description">Purchase "5" <a href="http://www.cdbaby.com/cd/madisonhockaday" target="_blank">here</a>.</p>
+					<iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/183513376&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" style="padding-top:60px;"></iframe>
+					<p class="music-description">Listen to more on <a href="https://soundcloud.com/adisonockaday" target="_blank">Soundcloud</a></p>
+				</div>
+			</section>
+			<section data-scroll-index="3">
+				<div class="content">
+					<h1>Contribute</h1>
+					<p>All contributions collected from the sales of “5” will be donated to the Anthony Rizzo Family Foundation. The Anthony Rizzo Family Foundation is a charity organization started by the Chicago Cubs’ first baseman, Anthony Rizzo, a cancer survivor. As a result of his personal journey, Anthony decided to start this organization which donate funds to cancer research and supports cancer patients and their families. To learn more about Anthony’s amazing story and the great things he is doing for his community visit <a href="http://rizzo44.com" target="_blank">rizzo44.com</a>, where you can also donate!</p>
+					<p>Thank you so much for your support!</p>
+				</div>
+			</section>
+			<hr>
+			<section data-scroll-index="4">
+				<div class="content">
+				<h1>Contact</h1>
+				<img id="contact" src="img/logo.png" />
+				<p class="music-description">Email: <a href="mailto:madiahockaday@gmail.com">madiahockaday@gmail.com</a></p>
+				</div>
+			</section>
+		</div>
+		<hr>
+		<footer>
+			<p>&#169; Madison Hockaday 2015</p>
+			<p>Designed and Developed by <a href="http://nicolezhu.io" target="_blank">Nicole Zhu</a></p>
+		</footer>
 	</body>
 </html>
