--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<hr>
 		<footer>
 			<p>&#169; Madison Hockaday 2015</p>
-			<p>Designed and Developed by <a href="http://nicolezhu.io" target="_blank">Nicole Zhu</a></p>
+			<p>Designed and Developed by <a href="http://twitter.com/nicolelzhu" target="_blank">Nicole Zhu</a></p>
 		</footer>
 	</body>
 </html>
