add madis facebook page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				<h1>Contact</h1>
 				<img id="contact" src="img/logo.png" />
 				<p class="music-description">Email: <a href="mailto:madiahockaday@gmail.com">madiahockaday@gmail.com</a></p>
+				<p class="music-description">Facebook: <a href="https://www.facebook.com/pages/Madison-Hockaday/847466278650244">Madison Hockaday</a></p>
 				</div>
 			</section>
 		</div>
